[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Sprites/Kunai.png" type="Texture" id=1]
[ext_resource path="res://Player/Kunai.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 78.7266, 10 )

[node name="Kunai" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )
vel = Vector2( 1500, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="time_life" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Kunai_area_entered"]
[connection signal="timeout" from="time_life" to="." method="_on_time_life_timeout"]
